--- a/config/locales/defaults/nb.yml
+++ b/config/locales/defaults/nb.yml
@@ -31,31 +31,31 @@ nb:
     - nov
     - des
     day_names:
-    - søndag
-    - mandag
-    - tirsdag
-    - onsdag
-    - torsdag
-    - fredag
-    - lørdag
+    - Søndag
+    - Mandag
+    - Tirsdag
+    - Onsdag
+    - Torsdag
+    - Fredag
+    - Lørdag
     formats:
       default: "%d.%m.%Y"
       long: "%e. %B %Y"
       short: "%e. %b"
     month_names:
     -
-    - januar
-    - februar
-    - mars
-    - april
-    - mai
-    - juni
-    - juli
-    - august
-    - september
-    - oktober
-    - november
-    - desember
+    - Januar
+    - Februar
+    - Mars
+    - April
+    - Mai
+    - Juni
+    - Juli
+    - August
+    - September
+    - Oktober
+    - November
+    - Desember
     order:
     - :day
     - :month
