--- a/config/locales/views/settings/en.yml
+++ b/config/locales/views/settings/en.yml
@@ -14,7 +14,7 @@ en:
         general_subtitle: Configure your preferences
         general_title: General
         default_period: Default Period
-        default_order: Menu Order
+        default_account_order: Default Account Order
         language: Language
         page_title: Preferences
         theme_dark: Dark
