--- a/config/locales/mailers/invitation_mailer/tr.yml
+++ b/config/locales/mailers/invitation_mailer/tr.yml
@@ -2,4 +2,4 @@
 tr:
   invitation_mailer:
     invite_email:
-      subject: "%{inviter} seni Maybe'de kendi ailesine katılmaya davet etti!"
+      subject: "%{inviter} seni Sure'de kendi ailesine katılmaya davet etti!"
