--- a/config/locales/views/imports/tr.yml
+++ b/config/locales/views/imports/tr.yml
@@ -30,7 +30,7 @@ tr:
         account_mapping_title: Hesaplarınızı eşleyin
         account_type_mapping_description: İçe aktardığınız dosyadaki tüm hesap türlerini Sure'deki hesap türlerine eşleyin.
         account_type_mapping_title: Hesap türlerinizi eşleyin
-        category_mapping_description: İçe aktardığınız dosyadaki tüm kategorileri Maybe'deki mevcut kategorilere eşleyin. Ayrıca yeni kategoriler ekleyebilir veya kategorize etmeden bırakabilirsiniz.
+        category_mapping_description: İçe aktardığınız dosyadaki tüm kategorileri Sure'deki mevcut kategorilere eşleyin. Ayrıca yeni kategoriler ekleyebilir veya kategorize etmeden bırakabilirsiniz.
         category_mapping_title: Kategorilerinizi eşleyin
         tag_mapping_description: İçe aktardığınız dosyadaki tüm etiketleri Maybe'deki mevcut etiketlere eşleyin. Ayrıca yeni etiketler ekleyebilir veya kategorize etmeden bırakabilirsiniz.
         tag_mapping_title: Etiketlerinizi eşleyin
