[i18n] Self-Hosting consistency

--- a/config/locales/views/settings/en.yml
+++ b/config/locales/views/settings/en.yml
@@ -84,7 +84,7 @@ en:
       profile_label: Account
       rules_label: Rules
       security_label: Security
-      self_hosting_label: Self hosting
+      self_hosting_label: Self-Hosting
       tags_label: Tags
       transactions_section_title: Transactions
       whats_new_label: What's new
