--- a/config/locales/views/settings/en.yml
+++ b/config/locales/views/settings/en.yml
@@ -72,6 +72,7 @@ en:
     settings_nav:
       accounts_label: Accounts
       api_key_label: API Key
+      advanced_section_title: Advanced
       billing_label: Billing
       categories_label: Categories
       feedback_label: Feedback
