--- a/config/locales/views/simplefin_items/en.yml
+++ b/config/locales/views/simplefin_items/en.yml
@@ -3,10 +3,22 @@ en:
   simplefin_items:
     create:
       success: SimpleFin connection added successfully! Your accounts will appear shortly as they sync in the background.
+      errors:
+        blank_token: Please enter a SimpleFin setup token.
+        invalid_token: Invalid setup token. Please check that you copied the complete token from SimpleFin Bridge.
+        token_compromised: The setup token may be compromised, expired, or already used. Please create a new one.
+        create_failed: "Failed to connect: %{message}"
+        unexpected: An unexpected error occurred. Please try again or contact support.
     destroy:
       success: SimpleFin connection will be removed
     update:
       success: SimpleFin connection updated successfully! Your accounts are being reconnected.
+      errors:
+        blank_token: Please enter a SimpleFin setup token.
+        invalid_token: Invalid setup token. Please check that you copied the complete token from SimpleFin Bridge.
+        token_compromised: The setup token may be compromised, expired, or already used. Please create a new one.
+        update_failed: "Failed to update connection: %{message}"
+        unexpected: An unexpected error occurred. Please try again or contact support.
     complete_account_setup:
       success: SimpleFin accounts have been set up successfully! Your transactions and holdings are being imported in the background.
     simplefin_item:
