Rename section title test

--- a/config/locales/views/settings/en.yml
+++ b/config/locales/views/settings/en.yml
@@ -59,10 +59,10 @@ en:
         invitation_link: Invitation link
         invite_member: Add member
         last_name: Last Name
-        page_title: Account
+        page_title: Profile Info
         pending: Pending
         profile_subtitle: Customize how you appear on Sure
-        profile_title: Profile
+        profile_title: Personal
         remove_invitation: Remove Invitation
         remove_member: Remove Member
         save: Save
