Implement Yahoo Finance

--- a/config/locales/views/settings/hostings/en.yml
+++ b/config/locales/views/settings/hostings/en.yml
@@ -3,16 +3,19 @@ en:
   settings:
     hostings:
       invite_code_settings:
-        description: Every new user that joins your instance of Maybe can only do
+        description:
+          Every new user that joins your instance of Maybe can only do
           so via an invite code
-        email_confirmation_description: When enabled, users must confirm their email
+        email_confirmation_description:
+          When enabled, users must confirm their email
           address when changing it.
         email_confirmation_title: Require email confirmation
         generate_tokens: Generate new code
         generated_tokens: Generated codes
         title: Require invite code for signup
       show:
-        general: External Services
+        general: General Settings
+        financial_data_providers: Financial Data Providers
         invites: Invite Codes
         title: Self-Hosting
         danger_zone: Danger Zone
@@ -25,13 +28,20 @@ en:
         description: Enter the Client ID provided by Brand Fetch
         label: Client ID
         placeholder: Enter your Client ID here
-        title: Brand Fetch
+        title: Brand Fetch Settings
       openai_settings:
         description: Enter the access token provided by OpenAI
         env_configured_message: Successfully configured through the OPENAI_ACCESS_TOKEN environment variable.
         label: Access Token
         placeholder: Enter your access token here
         title: OpenAI
+      yahoo_finance_settings:
+        title: Yahoo Finance
+        description: Yahoo Finance provides free access to stock prices, exchange rates, and financial data without requiring an API key.
+        status_active: Yahoo Finance is active and working
+        status_inactive: Yahoo Finance connection failed
+        connection_failed: Unable to connect to Yahoo Finance
+        troubleshooting: Check your internet connection and firewall settings. Yahoo Finance may be temporarily unavailable.
       twelve_data_settings:
         api_calls_used: "%{used} / %{limit} API daily calls used (%{percentage})"
         description: Enter the API key provided by Twelve Data
