--- a/config/locales/views/settings/en.yml
+++ b/config/locales/views/settings/en.yml
@@ -78,7 +78,7 @@ en:
       categories_label: Categories
       feedback_label: Feedback
       general_section_title: General
-      imports_label: Imports
+      imports_label: Import/Export
       logout: Logout
       merchants_label: Merchants
       guides_label: Guides
