--- a/config/locales/views/settings/hostings/en.yml
+++ b/config/locales/views/settings/hostings/en.yml
@@ -53,6 +53,7 @@ en:
       update:
         failure: Invalid setting value
         success: Settings updated
+      not_authorized: You are not authorized to perform this action
       clear_cache:
         cache_cleared: Data cache has been cleared. This may take a few moments to complete.
         not_authorized: You are not authorized to perform this action
