--- a/config/locales/views/enable_banking_items/en.yml
+++ b/config/locales/views/enable_banking_items/en.yml
@@ -8,12 +8,14 @@ en:
       connect_accounts_description: Connect your bank accounts through Enable Banking to automatically sync transactions.
     new:
       new_connection: New Enable Banking connection
+      aspsp_error: Unable to fetch list of banks. Please try again later.
     new_connection_form:
       select_aspsps: Select your bank
       link_account: Link account
-    create:
+    auth_callback:
       success: Enable Banking connection added successfully! Your accounts will appear shortly as they sync in the background.
       errors:
+        aut_failed: Authentication failed. Please try again.
         unexpected: An unexpected error occurred. Please try again or contact support.
     destroy:
       success: Enable Banking connection will be removed
