--- a/config/locales/views/settings/hostings/en.yml
+++ b/config/locales/views/settings/hostings/en.yml
@@ -40,6 +40,16 @@ en:
         placeholder: Enter your API key here
         plan: "%{plan} plan"
         title: Twelve Data
+      enable_banking_settings:
+        env_configured_message: Successfully configured through the ENABLE_BANKING_APPLICATION_ID environment variable.
+        enable_banking_country: Country
+        country_description: Select the country you whish to use to integrate Enable Banking.
+        enable_banking_application_id: Application ID
+        application_id_description: Enter the Application ID provided by Enable Banking
+        certificate_description: Paste the Enable Banking certificate content here.
+        placeholder_application_id: Enter your Application ID here
+        placeholder_certificate: Paste your Enable Banking certificate content here
+        title: Enable Banking
       update:
         failure: Invalid setting value
         success: Settings updated
