feat: Add missing translations

--- a/config/locales/views/enable_banking_items/en.yml
+++ b/config/locales/views/enable_banking_items/en.yml
@@ -29,6 +29,7 @@ en:
       confirm_body: This will permanently delete all the accounts in this group and all associated data.
       confirm_title: Delete Enable Banking connection?
       delete: Delete
+      connection: "connection"
       deletion_in_progress: "(deletion in progress...)"
       error: Error occurred while syncing data
       no_accounts_description: This connection doesn't have any synchronized accounts yet.
