--- a/config/locales/views/settings/securities/fr.yml
+++ b/config/locales/views/settings/securities/fr.yml
@@ -7,5 +7,5 @@ fr:
         disable_mfa_confirm: Êtes-vous sûr(e) de vouloir désactiver l'authentification à deux facteurs ?
           Cela rendra votre compte moins sécurisé.
         enable_mfa: Activer la 2FA
-        mfa_description: Ajoutez une couche supplémentaire de sécurité à votre compte en exigeant un code de votre application d'autentificateur lors du connexion
+        mfa_description: Ajoutez une couche supplémentaire de sécurité à votre compte en exigeant un code de votre application d'authentificateur lors de la connexion
         mfa_title: Authentification à deux facteurs
