--- a/config/locales/views/invitation_mailer/fr.yml
+++ b/config/locales/views/invitation_mailer/fr.yml
@@ -3,6 +3,6 @@ fr:
   invitation_mailer:
     invite_email:
       accept_button: Accepter l'invitation
-      body: "%{inviter} vous a invité à rejoindre la famille %{family} sur Sure !"
+      body: "%{inviter} vous a invité à rejoindre sa famille %{family} sur Sure !"
       expiry_notice: Cette invitation expire dans %{days} jours
       greeting: Bienvenue sur Sure!
