--- a/config/locales/views/mfa/fr.yml
+++ b/config/locales/views/mfa/fr.yml
@@ -16,19 +16,19 @@ fr:
       success: L'authentification à deux facteurs a été désactivée.
     new:
       code_label: Code de vérification
-      code_placeholder: Saisissez un code 6 chiffres
+      code_placeholder: Saisissez un code à 6 chiffres
       description: Améliorez la sécurité de votre compte en configurant l'authentification à deux facteurs.
-      page_title: Configuration de l'Authentification à Deux Facteurs
+      page_title: Configuration de l'authentification à deux facteurs
       scan_description: Utilisez une application d'authentification comme Google Authenticator ou 1Password
         pour scanner ce code QR.
-      scan_title: 1. Scanner le Code QR
+      scan_title: 1. Scanner le code QR
       secret_description: Si vous ne pouvez pas scanner le code QR, entrez cette clé secrète manuellement
         dans votre application d'authentification.
-      secret_title: Code de saisie manuelle
-      title: Configurer l'Authentification à Deux Facteurs
-      verify_button: Vérifier et activer 2FA
-      verify_description: Entrez le code 6 chiffres de votre application d'authentification.
-      verify_title: 2. Saisir le Code de vérification
+      secret_title: Clé secrète (saisie manuelle)
+      title: Configurer l’authentification à deux facteurs
+      verify_button: Vérifier et activer l’authentification à deux facteurs
+      verify_description: Entrez le code à 6 chiffres de votre application d’authentification.
+      verify_title: 2. Saisissez le code de vérification
     verify:
       description: Entrez le code de votre application d'authentification pour continuer.
       page_title: Vérifier l'Authentification à Deux Facteurs
