--- a/config/locales/views/settings/api_keys/fr.yml
+++ b/config/locales/views/settings/api_keys/fr.yml
@@ -8,7 +8,7 @@ fr:
       scope_descriptions:
         read_accounts: "Afficher les comptes"
         read_transactions: "Afficher les transactions"
-        read_balances: "Afficher les solde"
+        read_balances: "Afficher les soldes"
         write_transactions: "Créer des transactions"
     api_keys:
       show:
@@ -29,7 +29,7 @@ fr:
         active: "Active"
         key_name: "Nom"
         created_at: "Créée le"
-        last_used: "Dernier utilisation"
+        last_used: "Dernière utilisation"
         expires: "Expire le"
         ago: "il y a"
         never_used: "Jamais utilisée"
@@ -43,10 +43,10 @@ fr:
       new:
         title: "Créer une clé API"
         create_new_key: "Créer une nouvelle clé API"
-        description: "Configurez votre nouvelle clé API avec un nom déscriptif et des autorisations appropriées."
+        description: "Configurez votre nouvelle clé API avec un nom descriptif et des autorisations appropriées."
         name_label: "Nom de la clé API"
-        name_placeholder: "Application de production, Tableau de bord d'analytiques"
-        name_help: "Choisissez un nom déscriptif pour vous aider à identifier le but de cette clé."
+        name_placeholder: "Application de production, Tableau de bord analytique"
+        name_help: "Choisissez un nom déscriptif pour vous aider à identifier l'objectif de cette clé."
         permissions_label: "Autorisations"
         permissions_help: "Sélectionnez les autorisations nécessaires pour votre clé API. Vous pouvez toujours créer une nouvelle clé avec des autorisations différentes."
         scope_details:
@@ -59,17 +59,17 @@ fr:
         create_key: "Créer une clé API"
         cancel: "Annuler"
       created:
-        title: "Clé API Créée"
-        success_title: "Clé API Créée avec Succès"
-        success_description: "Votre nouvelle clé API est prête à être utilisée. Assurez-vous de la copier maintenant, car vous ne pourrez plus la voir une fois de plus."
-        your_api_key: "Votre Clé API"
+        title: "Clé API créée"
+        success_title: "Clé API créée avec succès"
+        success_description: "Votre nouvelle clé API est prête à être utilisée. Assurez-vous de la copier maintenant, car vous ne pourrez plus l'afficher par la suite."
+        your_api_key: "Votre clé API"
         key_name: "Nom"
         permissions: "Autorisations"
-        critical_warning_title: "⚠️ Critique : Sauvegardez votre clé API à présent"
+        critical_warning_title: "⚠️ Critique : Sauvegardez votre clé API dès à présent"
         critical_warning_1: "C'est le seul moment où vous verrez votre clé API en texte brut."
-        critical_warning_2: "Copiez-la et stockez-la de manière sécurisée dans votre gestionnaire de mots de passe ou application."
+        critical_warning_2: "Copiez-la et stockez-la de manière sécurisée dans votre gestionnaire de mots de passe ou dans l'application."
         critical_warning_3: "Si vous l'avez perdue, vous devrez en créer une nouvelle."
         usage_instructions_title: "Démarrage rapide"
         usage_instructions: "Utilisez votre clé API en l'incluant dans l'en-tête X-Api-Key :"
         copy_key: "Copier la clé API"
-        continue: "Continuer aux paramètres de la clé API"
+        continue: "Continuer vers les paramètres de la clé API"
