Add centralized branding helpers and update locales

--- a/config/locales/views/email_confirmation_mailer/nb.yml
+++ b/config/locales/views/email_confirmation_mailer/nb.yml
@@ -7,4 +7,4 @@ nb:
       cta: Bekreft endring av e-post
       expiry_notice: Denne lenken vil utløpe om %{hours} timer.
       greeting: Hei!
-      subject: 'Sure: Bekreft endring av e-posten din'
+      subject: '%{brand}: Bekreft endring av e-posten din'
