--- a/config/locales/mailers/invitation_mailer/nb.yml
+++ b/config/locales/mailers/invitation_mailer/nb.yml
@@ -2,4 +2,4 @@
 nb:
   invitation_mailer:
     invite_email:
-      subject: "%{inviter} har invitert deg til å bli med i husholdningen deres på %{brand}!"
+      subject: "%{inviter} har invitert deg til å bli med i husholdningen deres på %{product_name}!"
