--- a/config/locales/views/invitation_mailer/en.yml
+++ b/config/locales/views/invitation_mailer/en.yml
@@ -3,6 +3,6 @@ en:
   invitation_mailer:
     invite_email:
       accept_button: Accept Invitation
-      body: "%{inviter} has invited you to join the %{family} family on %{brand}!"
+      body: "%{inviter} has invited you to join the %{family} family on %{product_name}!"
       expiry_notice: This invitation will expire in %{days} days
-      greeting: Welcome to %{brand}!
+      greeting: Welcome to %{product_name}!
