--- a/config/locales/views/subscriptions/en.yml
+++ b/config/locales/views/subscriptions/en.yml
@@ -1,3 +1,3 @@
 en:
   subscriptions:
-    self_hosted_alert: "%{brand_plus} is not available in self-hosted mode."
+    self_hosted_alert: "%{product_name} is not available in self-hosted mode."
