--- a/config/locales/views/subscriptions/tr.yml
+++ b/config/locales/views/subscriptions/tr.yml
@@ -1,4 +1,4 @@
 ---
 tr:
   subscriptions:
-    self_hosted_alert: "%{brand_plus} kendi sunucunda barındırılan modda kullanılamaz."
+    self_hosted_alert: "%{product_name} kendi sunucunda barındırılan modda kullanılamaz."
