--- a/config/locales/views/registrations/en.yml
+++ b/config/locales/views/registrations/en.yml
@@ -19,6 +19,7 @@ en:
       role_member: member
       submit: Create account
       title: Create your account
+      google_auth_connect: Sign up with Google
       welcome_body: To get started, you must sign up for a new account.  You will
         then be able to configure additional settings within the app.
       welcome_title: Welcome to Self Hosted Maybe!
