--- a/config/locales/views/registrations/nb.yml
+++ b/config/locales/views/registrations/nb.yml
@@ -19,6 +19,7 @@ nb:
       role_member: medlem
       submit: Opprett konto
       title: Opprett kontoen din
+      google_auth_connect: Registrer deg med Google
       welcome_body: For å komme i gang må du registrere deg for en ny konto. Du vil
         da kunne konfigurere flere innstillinger i appen.
       welcome_title: Velkommen til Self Hosted Sure!
