--- a/config/locales/views/registrations/tr.yml
+++ b/config/locales/views/registrations/tr.yml
@@ -19,6 +19,7 @@ tr:
       role_member: üye
       submit: Hesap oluştur
       title: Hesabınızı oluşturun
+      google_auth_connect: Google ile kayıt ol
       welcome_body: Başlamak için yeni bir hesap oluşturmalısınız. Daha sonra uygulama içinde ek ayarları yapılandırabileceksiniz.
       welcome_title: Self Hosted Maybe'ye Hoş Geldiniz!
       password_placeholder: Şifrenizi girin
