Allow disabling AI assistant (#146)
* Test disabling AI assistant

* Leave "Maybe" out of it

* It's "sure" now

--- a/config/locales/views/settings/en.yml
+++ b/config/locales/views/settings/en.yml
@@ -5,6 +5,7 @@ en:
       show:
         page_title: AI Prompts
         openai_label: OpenAI
+        disable_ai: Disable AI Assistant
         prompt_instructions: Prompt Instructions
         main_system_prompt:
           title: Main System Prompt
