Added translations for ca - Catalan (#238)
* Add CA locales for models

* Add CA locales for views

* Use translations in activity feed

* Additional CA locales

* Fix typo

---------

Co-authored-by: Juan José Mata <juanjo.mata@gmail.com>

--- a/config/locales/views/accounts/en.yml
+++ b/config/locales/views/accounts/en.yml
@@ -42,6 +42,8 @@ en:
         new_balance: New balance
         new_transaction: New transaction
         no_entries: No entries found
+        search:
+          placeholder: Search entries by name
         title: Activity
       chart:
         balance: Balance
