Add onboarding modes to self-hosted signup

--- a/config/locales/views/registrations/tr.yml
+++ b/config/locales/views/registrations/tr.yml
@@ -8,6 +8,7 @@ tr:
       user:
         create: Devam Et
   registrations:
+    closed: Kayıtlar şu anda kapalı.
     create:
       failure: Kayıt olurken bir sorun oluştu.
       invalid_invite_code: Geçersiz davet kodu, lütfen tekrar deneyin.
