--- a/config/locales/views/settings/hostings/en.yml
+++ b/config/locales/views/settings/hostings/en.yml
@@ -3,17 +3,20 @@ en:
   settings:
     hostings:
       invite_code_settings:
-        description: Every new user that joins your instance of %{product} can only do
-          so via an invite code
+        description: Control how new people sign up for your instance of %{product}.
         email_confirmation_description: When enabled, users must confirm their email
           address when changing it.
         email_confirmation_title: Require email confirmation
         generate_tokens: Generate new code
         generated_tokens: Generated codes
-        title: Require invite code for signup
+        title: Onboarding
+        states:
+          open: Open
+          closed: Closed
+          invite_only: Invite-only
       show:
         general: External Services
-        invites: Invite Codes
+        invites: Onboarding
         title: Self-Hosting
         danger_zone: Danger Zone
         clear_cache: Clear data cache
@@ -47,6 +50,7 @@ en:
       update:
         failure: Invalid setting value
         success: Settings updated
+        invalid_onboarding_state: Invalid onboarding state
       clear_cache:
         cache_cleared: Data cache has been cleared. This may take a few moments to complete.
       not_authorized: You are not authorized to perform this action
